--- a/.github/workflows/lambda-schedule.yml
+++ b/.github/workflows/lambda-schedule.yml
@@ -2,7 +2,7 @@ name: Update DB
 
 on:
   schedule:
-    - cron: '0/10 * * * *'
+    - cron: '50 0/4 * * *'
 jobs:
   build:
     name: Trigger Lambda Run
