--- a/.github/workflows/lambda-schedule.yml
+++ b/.github/workflows/lambda-schedule.yml
@@ -38,7 +38,7 @@ jobs:
           ${{ runner.os }}-pnpm-store-
 
     - name: Install dependencies
-      run: pnpm install
+      run: pnpm install --frozen-lockfile
 
     - name: Build project
       run: pnpm run build
