--- a/.github/workflows/lambda-schedule.yml
+++ b/.github/workflows/lambda-schedule.yml
@@ -2,7 +2,7 @@ name: Update DB
 
 on:
   schedule:
-    - cron: '50 0/4 * * *'
+    - cron: '10 0/1 * * *'
 jobs:
   build:
     name: Trigger Lambda Run
@@ -56,5 +56,4 @@ jobs:
         git config --global user.name 'Lambda - Automatic Price Updator'
         git config --global user.email 'lambda@users.noreply.github.com'
         git add db
-        git commit -m "automated price update"
-        git push
+        [ -z "$(git status --porcelain)" ] && git commit -m "automated price update" && git push
