--- a/.github/workflows/lambda-schedule.yml
+++ b/.github/workflows/lambda-schedule.yml
@@ -56,4 +56,4 @@ jobs:
         git config --global user.name 'Lambda - Automatic Price Updator'
         git config --global user.email 'lambda@users.noreply.github.com'
         git add db
-        [ -z "$(git status --porcelain)" ] && git commit -m "automated price update" && git push
+        ! [ -z "$(git status --porcelain)" ] && git commit -m "automated price update" && git push || echo "No changes to be committed"
