--- a/.github/workflows/lambda-schedule.yml
+++ b/.github/workflows/lambda-schedule.yml
@@ -2,7 +2,7 @@ name: Update DB
 
 on:
   schedule:
-    - cron: '50 0/4 * * *'
+    - cron: '0/10 * * * *'
 jobs:
   build:
     name: Trigger Lambda Run
@@ -10,6 +10,8 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Install Node.js
       uses: actions/setup-node@v3
