--- a/.github/workflows/lambda-schedule.yml
+++ b/.github/workflows/lambda-schedule.yml
@@ -4,7 +4,7 @@ permissions: write-all
 
 on:
   schedule:
-    - cron: '0/10 * * * *'
+    - cron: '50 0/4 * * *'
 jobs:
   build:
     name: Trigger Lambda Run
@@ -58,6 +58,6 @@ jobs:
     - name: Commit changes
       run: |
         git config --global user.name 'Lambda - Automatic Price Updator'
-        git config --global user.email 'lambda@users.noreply.github.com'
+        git config --global user.email 'lambda@noreply.glitchful.dev'
         git add db
         ! [ -z "$(git status --porcelain)" ] && git commit -m "automated price update" && git push || echo "No changes to be committed"
