sdk for apy calculation added

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "outDir": "build"
   },
   "include": [
-    "src/**/*.ts",
-    "test/**/*.ts"
+    "packages/**/*.ts",
+    "packages/**/package.json"
   ]
 }
