--- a/package.json
+++ b/package.json
@@ -1,41 +1,17 @@
 {
-  "name": "sol-stake-pool-apy",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "node build/src/index.js",
-    "build": "tsc -p .",
-    "lint": "gts lint",
-    "test": "jest",
-    "clean": "gts clean",
-    "compile": "tsc",
-    "fix": "gts fix",
-    "prepare": "pnpm run compile",
-    "pretest": "pnpm run lint",
-    "posttest": "pnpm run lint"
-  },
-  "engines" : { 
-    "node" : ">=10.4.0"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@lidofinance/solido-sdk": "^0.8.1",
-    "@marinade.finance/marinade-ts-sdk": "^4.0.4",
-    "@solana/spl-stake-pool": "^0.6.5",
-    "@solana/spl-token": "^0.3.7",
-    "@solana/web3.js": "^1.73.2",
-    "dotenv": "^16.0.3"
-  },
-  "devDependencies": {
-    "@jest/globals": "^29.4.3",
-    "@types/jest": "^29.4.0",
-    "@types/node": "^14.11.2",
-    "gts": "^3.1.1",
-    "jest": "^29.4.3",
-    "ts-jest": "^29.0.5",
-    "typescript": "~4.7.0"
-  }
+    "name": "sol-stake-pool-apy",
+    "private": true,
+    "scripts": {
+        "build": "tsc --project tsconfig.json",
+        "start": "NODE_PATH=packages/price-updator/node_modules node build/packages/price-updator/src/index.js",
+        "lint": "gts lint",
+        "clean": "gts clean",
+        "compile": "tsc",
+        "fix": "gts fix",
+        "publish": "pnpm compile && cd build/packages/sol-apy-sdk && pnpm publish --dry-run"
+    },
+    "devDependencies": {
+        "gts": "^3.1.1",
+        "typescript": "~4.7.0"
+    }
 }
