--- a/.github/workflows/lambda-schedule.yml
+++ b/.github/workflows/lambda-schedule.yml
@@ -4,7 +4,7 @@ permissions: write-all
 
 on:
   schedule:
-    - cron: '50 0/1 * * *'
+    - cron: '10/20 0/1 * * *'
 jobs:
   build:
     name: Trigger Lambda Run
