--- a/packages/sol-apy-sdk/package.json
+++ b/packages/sol-apy-sdk/package.json
@@ -7,12 +7,23 @@
     "types": "./index.d.ts",
     "license": "UNLICENCED",
     "name": "@glitchful-dev/sol-apy-sdk",
-    "files": ["*.js", "*.d.ts"],
+    "scripts": {
+      "test": "jest"
+    },
+    "files": [
+        "*.js",
+        "*.d.ts"
+    ],
     "dependencies": {
         "csv-parse": "^5.3.6",
         "fetch-ponyfill": "^7.1.0"
     },
     "engines": {
         "node": ">=12.3.0"
+    },
+    "devDependencies": {
+        "@jest/globals": "^29.5.0",
+        "jest": "^29.5.0",
+        "ts-jest": "^29.1.0"
     }
 }
