--- a/packages/price-updator/package.json
+++ b/packages/price-updator/package.json
@@ -10,11 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@coral-xyz/borsh": "^0.30.0",
     "@lidofinance/solido-sdk": "^0.8.1",
     "@marinade.finance/marinade-ts-sdk": "^4.0.4",
     "@solana/spl-stake-pool": "^0.6.5",
     "@solana/spl-token": "^0.3.7",
     "@solana/web3.js": "^1.73.2",
+    "buffer-layout": "^1.2.2",
     "dotenv": "^16.0.3"
   },
   "devDependencies": {
